2005-05-13

	* version 1.9.10

2005-05-13

	* src/prefs_common.[ch]
	  src/summaryview.c: made rules hint configurable. Removed debug code.
	* src/gtkutils.c: gtkut_tree_row_reference_equal(): return FALSE if
	  one of the reference is invalid.

2005-05-13

	* src/summaryview.c: don't open selected messages on 'View/Go to'
	  if the message view is hidden.

2005-05-13

	* src/summaryview.c: modified the handling of middle-click and
	  double-click.

2005-05-13

	* src/summaryview.c: adjusted the width of icon-titled columns.

2005-05-12

	* src/summaryview.c: summary_attract_by_subject()
	  src/mainwindow.c: main_window_set_menu_sensitive(): disable 'Attract
	  by subject' if sorted.

2005-05-12

	* src/summaryview.c: summary_attract_by_subject(): optimized using
	  gtk_tree_store_reorder() (gtk_tree_store_move_after() is too slow).

2005-05-12

	* src/summaryview.c: display collapsed rows which have unread children
	  as bold.

2005-05-11

	* src/summaryview.c: summary_have_unread_children(): implemented.
	  summary_row_expanded(): expand all children.
	  summary_thread_build(): added missing g_hash_table_destroy().

2005-05-11

	* src/summaryview.c
	  src/mainwindow.c: summary_thread_build(): implemented.

2005-05-11

	* src/utils.c: remove_dir_recursive(): fixed operation failure if
	  current directory is inside one which is to be removed.
	* src/summaryview.c: summary_unthread(): implemented.
	* src/folderview.c: fixed crash when FolderView::selected became
	  invalid. Unset it if selection becomes empty.
	* src/defs.h: changed DEFAULT_MESSAHE_FONT from "Sans 14" to
	  "Monospace 12".

2005-05-10

	* src/summaryview.c: summary_select_thread(): implemented.

2005-05-10

	* src/summary_search.c: reimplemented summary search.

2005-05-10

	* src/summaryview.c:
	  summary_show(): display selected message if always_show_msg is set.
	  summary_button_pressed(): fixed the handling of modifier key.
	  summary_selection_changed(): clear message view if not single