@@ -1,3 +1,10 @@
+2005-05-15
+
+	* src/summaryview.c: summary_key_pressed(): fixed a bug that Return,
+	  Space and Delete key are ignored when multiple messages were
+	  selected.
+	* src/headerview.c: added missing gtk/gtkimage.h include.
+
 2005-05-13
 
 	* version 1.9.10
